<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="tEmail">Email:</string>
    <string name="tPassword">Password:</string>
    <string name="bsignin">Sign-in</string>
    <string name="tlogin">Login</string>
    <string name="tData">Data anda</string>
    <string name="txemail">ini hasil email</string>
    <string name="txpassword">ini hasil password</string>
    <string name="label2">Login berhasil</string>
    <string name="login">Login</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="enama">Masukkan nama</string>
    <string name="eemail">Masukkan email</string>
    <string name="epass">Masukkan password</string>
    <string name="erepass">Masukkan kembali passsword</string>
    <string name="ealamat">Masukkan alamat</string>
    <string name="lihatdata">Lihat data</string>
    <string name="editdata">Edit data</string>
    <string name="datakontak">Data kontak</string>
    <string name="namaitem">Nama item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>

</resources>